trying to fix resume link on mobile from being blue

--- a/src/App.css
+++ b/src/App.css
@@ -164,6 +164,13 @@ h1, h4, h5, p {
       color: white;
   }
 
+  .resume {
+    color: white;
+  }
+  .resume:visted {
+    color: white;
+  }
+
 }
 
 @media only screen and (max-width: 768px) {
@@ -181,6 +188,13 @@ h1, h4, h5, p {
   .list-group-item a .fab {
       visibility: visible;
       color: white;
+  }
+
+  .resume {
+    color: white;
+  }
+  .resume:visted {
+    color: white;
   }
 
 }
